# mllam-data-prep

./: .flake8  .gitignore  .gitlab-ci.yml  .nfs00000000849d97a000001aca  .pre-commit-config.yaml  CHANGELOG.md  README.md  example.danra.yaml  example.era5_cropped.yaml  example.yaml  height_levels.pkl  pyproject.toml  sliced_example.danra.yaml
.github/: pull_request_template.md
.github/workflows/: ci-pre-commit.yml  ci-pypi-deploy.yml  python-package-pip.yml
docs/: domain-cropping-mllam.ipynb  domain-cropping.ipynb
mllam_data_prep/: __init__.py  __main__.py  cli.py  config.py  config_spec.py  create_dataset.py  derived_variables.py  main.py  recreate_inputs.py
mllam_data_prep/config/: __init__.py  get.py  spec.py  storage.py
mllam_data_prep/ops/: __init__.py  calc_stats.py  chunking.py  cropping.py  derive_variables.py  derived_variables.py  forcings.py  loading.py  mapping.py  projection.py  selection.py  stacking.py  statistics.py  subsetting.py
mllam_data_prep/ops/derive_variable/: __init__.py  dispatcher.py  main.py  physical_field.py  time_components.py
notebooks/: lateral-boundaries.ipynb
tests/: data.py  test_branch.py  test_cli.py  test_config.py  test_convex_hull_cropping.py  test_dataset.py  test_derived_variables.py  test_distributed.py  test_existing_output.py  test_from_config.py  test_inverse.py  test_latlon_convex_hull_cropping.py  test_output_coord_ranges_slicing.py  test_selection.py  test_stacking.py
tests/derive_variable/: conftest.py  test_main.py  test_physical_field.py  test_time_components.py
tests/old_config_schema_examples/: README.md
tests/old_config_schema_examples/v0.2.0/: example.danra.yaml
tests/old_config_schema_examples/v0.5.0/: example.danra.yaml
tests/resources/: sliced_example.danra.yaml  sliced_example_with_datetime_strings.danra.yaml  valid_config.yaml
