[project]
name = "mllam-data-prep"
version = "0.1.0"
description = "dataset preparation for data-driven weather models"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "xarray>=2024.2.0",
    "zarr>=2.17.0",
    "dask>=2024.2.1",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "isodate>=0.6.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.isort]
profile = "black"

[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.2",
    "ipdb>=0.13.13",
    "rich>=13.7.1",
]
