[project]
name = "mllam-data-prep"
version = "0.4.0"
description = "dataset preparation for data-driven weather models"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
    {name = "Hauke Schulz", email = "has@dmi.dk"},
    {name = "Emy Alerskans", email = "ea@dmi.dk"},
    {name = "Eleni Briola", email = "elb@dmi.dk"},
]
dependencies = [
    "xarray>=2024.2.0",
    "zarr>=2.17.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "isodate>=0.6.1",
    "requests>=2.31.0",
    "aiohttp>=3.9.3",
    "dataclass-wizard>=0.22.3",
    "semver>=3.0.2",
    "rich>=13.7.1",
    "dask>=2024.2.1",
    "psutil>=5.7.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dask-distributed = [
    "dask[distributed]>=2024.7.1",
    "bokeh!=3.0.*,>=2.4.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.isort]
profile = "black"

[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.2",
    "ipdb>=0.13.13",
    "pre-commit>=3.7.1",
]
